<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_wh"
        android:icon="@drawable/earth_globe_with_continents"
        android:title="@string/world_hist"
        android:enabled="false"/>

    <item
        android:id="@+id/nav_clt"
        android:icon="@android:drawable/ic_menu_upload_you_tube"
        android:title="@string/worl_cult"
        android:enabled="false"/>
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_mood_black_24dp"
        android:title="@string/citation" />

    <item
        android:id="@+id/nav_hm"
        android:icon="@drawable/calendar"
        android:title="@string/histoir_mois" />

    <item
        android:id="@+id/nav_game"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/jeux_menu"
        android:enabled="false"/>
    <!--item
        android:id="@+id/nav_set"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" /-->
</menu>